# fermenter

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml  pom.xml
.github/workflows/: maven.yaml
ale/: pom.xml
ale/ale-angular-mda/: pom.xml
ale/ale-cookbook-angular/: pom.xml
brett/: pom.xml
brett/brett-cookbook/: pom.xml  pyproject.toml
brett/brett-cookbook/tests/features/: example.feature
brett/brett-mda/: pom.xml
build-tools/: pom.xml
cider/: pom.xml
cider/cider-objective-c-mda/: pom.xml
docker/: pom.xml
fermenter-ejb/: .project  pom.xml
fermenter-ejb-mda/: pom.xml
fermenter-hibernate/: .project  pom.xml
fermenter-hibernate-mda/: .project  pom.xml
fermenter-java/: .project  pom.xml
fermenter-java-mda/: .project  pom.xml
fermenter-mda/: .project  README.md  pom.xml
fermenter-objective-c-mda/: pom.xml
fermenter-test/: README.md  pom.xml
fermenter-test/fermenter-test-domain/: pom.xml
fermenter-test/fermenter-test-domain-integration-test/: pom.xml
fermenter-test/fermenter-test-domain-webapp/: pom.xml
fermenter-test/fermenter-test-profile/: pom.xml
stout/: pom.xml
stout/stout-authentication/: pom.xml
stout/stout-authzforce/: pom.xml
stout/stout-authzforce-attribute-extension/: pom.xml
stout/stout-build-tools/: pom.xml
stout/stout-cookbook/: pom.xml
stout/stout-core/: pom.xml
stout/stout-ejb/: pom.xml
stout/stout-ejb-mda/: pom.xml
stout/stout-hibernate/: pom.xml
stout/stout-hibernate-mda/: pom.xml
stout/stout-java/: pom.xml
stout/stout-java-mda/: pom.xml
test-primer/: pom.xml
(+2478 files in other folders)
